--- a/eewee-sellsy/css/style.css
+++ b/eewee-sellsy/css/style.css
@@ -1,5 +1,6 @@
 /* BORDER */
 .title1{ border-bottom:1px solid #333; text-align:left; text-transform:uppercase; padding-bottom:10px; margin:20px 0 10px 0; }
+.border-error{ border:1px solid red; }
 
 /* MARGIN */
 .mb10{ margin-bottom:10px; }
