--- a/eewee-sellsy/css/style.css
+++ b/eewee-sellsy/css/style.css
@@ -37,8 +37,9 @@ table.table1 textarea{ width: 200px; height: 270px; }
 .f_l{ float: left; }
 .hndle{	padding: 10px; }
 .eewee-success{ border:1px solid green; }
-.eewee-error{ border:1px solid red; }
+.eewee-error{ border:1px solid red !important; }
 .eewee-required{ color:red; }
 .eewee-success-message{ padding:10px; margin-top:5px; margin-bottom:5px; color:#468847; border:1px solid #468847; background-color:#dff0d8; text-transform:uppercase;
 	text-align:center; }
-.eewee-error-message{ padding:10px; margin-top:5px; margin-bottom:5px; color:#c76d6b; border:1px solid #c76d6b; background-color:#f2dede; text-transform:uppercase; text-align:center; }
+.eewee-error-message{ padding:10px; margin-top:5px; margin-bottom:5px; color:#c76d6b; border:1px solid #c76d6b; background-color:#f2dede; text-transform:uppercase; }
+.eewee-error-message li{ margin-left:1em; }
